add message error

--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
                 </table>
               </div>
             </div>
+            <div class="has_error has_error_hide">Error</div>
             <div class="tools_legend">
               <p id="tools_legend--first" class="tools_legend--first"></p>
               <p id="tools_legend--second" class="tools_legend--second"></p>
