remove scroll on calculator

--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
         </div>
 
         <!-- SCROLL -->
-        <div class="miih_free" id="slideContainer">
+        <div  id="slideContainer">
           <h2 id="popup_1_title"></h2>
           <div id="scrollContainer" class="scrollContainer miih_free">
             <div class="scroll" style="transform: translate(0px, 0px) translateZ(0px)">
