--- a/index.html
+++ b/index.html
@@ -425,6 +425,7 @@
     <script src="js/plugins/chart.js"></script>
     <script type="text/javascript" src="assets/json/fr.json"></script>
     <script type="text/javascript" src="js/detectDevice.js"></script>
+    <script type="text/javascript" src="js/resize.js"></script>
     <script type="text/javascript" src="js/lang.js"></script>
     <script type="text/javascript" src="js/fullscreen.js"></script>
     <script type="text/javascript" src="js/popup.js"></script>
