add legend on calculator

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             <div class="tools_legend">
               <p id="tools_legend--first" class="tools_legend--first"></p>
               <p id="tools_legend--second" class="tools_legend--second"></p>
-              <!-- <p id="tools_legend--third" class="tools_legend--third"></p> -->
+             
             </div>
           </div>
         </section>
@@ -362,6 +362,11 @@
             <div class="scroll" style="transform: translate(0px, 0px) translateZ(0px)">
               <p id="popup_1_text"></p>
             </div>
+          </div>
+          <div class="tools_legend tools_legend_2">
+            <p id="tools_legend--first_2" class="tools_legend--first"></p>
+            <p id="tools_legend--second_2" class="tools_legend--second"></p>
+          
           </div>
         </div>
         <!-- END SCROLL -->
