--- a/index.html
+++ b/index.html
@@ -613,23 +613,18 @@
             </svg>
           </button>
           <div class="resumen_pdf">
-            <a
-              href="./assets/pdf/cevenfacta-epar-product-information_en.pdf"
-              target="_blank"
-              id="resumen_pdf_button"
-            >
+           
               <!-- <div class="icon_pdf">  <img class="icon_img" src="./assets/medias/icon_pdf.png" alt="" width="36" height="36" /> </div> -->
 
               <p class="resumen_pdf_button_text">
-                1. CEVENFACTA<sup>®</sup> Resumen de las caractéristicas del
-                producto
+                <span class="no_underline">1.</span> <a href="./assets/pdf/cevenfacta-epar-product-information_en.pdf" target="_blank" id="resumen_pdf_button" >CEVENFACTA<sup>®</sup>&nbsp;Resumen de las caractéristicas del producto</a>
               </p>
-            </a>
+           
 
             <!-- <div class="icon_pdf">  <img class="icon_img" src="./assets/medias/icon_pdf.png" alt="" width="36" height="36" /> </div> -->
 
             <p class="resumen_pdf_button_text">
-              2. NOVOSEVEN<sup>®</sup> Resumen de las caracterîsticas del
+              <span class="no_underline">2.</span> NOVOSEVEN<sup>®</sup>&nbsp;Resumen de las caracterîsticas del
               producto
             </p>
           </div>
