--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
             <!-- <div class="icon_pdf">  <img class="icon_img" src="./assets/medias/icon_pdf.png" alt="" width="36" height="36" /> </div> -->
 
             <p class="resumen_pdf_button_text">
-              <span class="no_underline">2.</span> NOVOSEVEN<sup>®</sup>&nbsp;Resumen de las caracterîsticas del
+              <span class="no_underline">2.</span> NOVOSEVEN<sup>®</sup>&nbsp;Resumen de las características del
               producto
             </p>
           </div>
