--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
               <!-- <div class="icon_pdf">  <img class="icon_img" src="./assets/medias/icon_pdf.png" alt="" width="36" height="36" /> </div> -->
 
               <p class="resumen_pdf_button_text">
-                <span class="no_underline">1.</span> <a href="./assets/pdf/cevenfacta-epar-product-information_en.pdf" target="_blank" id="resumen_pdf_button" >CEVENFACTA<sup>®</sup>&nbsp;Resumen de las caractéristicas del producto</a>
+                <span class="no_underline">1.</span> <a href="./assets/pdf/cevenfacta-epar-product-information_en.pdf" target="_blank" id="resumen_pdf_button" >CEVENFACTA<sup>®</sup>&nbsp;Resumen de las características del producto</a>
               </p>
            
 
